--- a/.github/workflows/build_and_upload_release.yml
+++ b/.github/workflows/build_and_upload_release.yml
@@ -9,7 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3 🛎️
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
 
       - name: Setup Python 3.9 🐍
         uses: actions/setup-python@v4
