--- a/.github/workflows/codestyle.yml
+++ b/.github/workflows/codestyle.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 16.18
 
-      - name: Setup Python 3.9 🐍
+      - name: Setup Python 🐍
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
