--- a/.github/workflows/build_and_upload_release.yml
+++ b/.github/workflows/build_and_upload_release.yml
@@ -6,7 +6,7 @@ on:
       - 'master'
 
 jobs:
-  build:
+  build_and_upload_release:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,11 +23,14 @@ jobs:
         with:
           python-version: 3.9
 
-      - name: Install Requirements 📥
-        run: pip install --upgrade pip setuptools twine wheel
+      - name: Install Dependencies 📥
+        run: |
+          pip install --upgrade pip setuptools twine wheel
+          pip install -r ./demo/requirements.txt
+          npm i
 
       - name: Build Theme 🏗️
-        run: webpack
+        run: npx webpack
 
       - name: Build Wheels ☸️
         run: |
