--- a/theme.conf
+++ b/theme.conf
@@ -5,6 +5,7 @@ pygments_style = default
 
 [options]
 canonical_url =
+base_url =
 analytics_id =
 collapse_navigation = True
 sticky_navigation = True
@@ -13,7 +14,14 @@ titles_only =
 logo_only =
 prev_next_buttons_location = bottom
 style_external_links = False
-tutorial_name = sample
+tutorial_name = sample # extract to building examples
 
 # Below are the variables that are to be replaced by other distributed website links
-website_type =
+tab_intro_dff =
+tab_intro_addons =
+tab_intro_designer =
+tab_get_started =
+tab_tutorials =
+tab_documentation =
+tab_ecosystem =
+tab_about_us =
