--- a/.github/workflows/build_and_upload_release.yml
+++ b/.github/workflows/build_and_upload_release.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Setup NodeJS LTS 🪢
+      - name: Setup NodeJS LTS 🕸️
         uses: actions/setup-node@v3
         with:
           node-version: 16.18
@@ -42,18 +42,18 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: twine upload --verbose -u '__token__' dist/*
 
-      - name: Upload Binaries to GitHub Releases 🏭
+      - name: Upload Binaries to GitHub Releases 📦
         uses: svenstaro/upload-release-action@v2
         with:
           file: dist/*
           overwrite: true
           file_glob: true
 
-      - name: Install Wheels 🚃
+      - name: Install Wheels 📩
         run: pip install ./dist/dff_sphinx_theme-*.whl
 
       - name: Build Demo Module 👁️
-        run: sphinx-build demo/docs web-build
+        run: sphinx-build -D html_theme_options.base_url=https://deeppavlov.github.io/dff_sphinx_theme/ demo/docs web-build
 
       - name: NoJekyll ❌
         run: touch ./build/.nojekyll
