--- a/.github/workflows/build_and_upload_release.yml
+++ b/.github/workflows/build_and_upload_release.yml
@@ -71,6 +71,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
+
       - name: Restore Artifact 📚
         uses: actions/download-artifact@v3
         with:
