examples buttons added

--- a/demo/requirements.txt
+++ b/demo/requirements.txt
@@ -4,6 +4,10 @@ sphinxcontrib-httpdomain>=1.8.0
 sphinxcontrib-katex==0.9.0
 sphinx_copybutton>=0.5
 sphinx_gallery>=0.11.1
+sphinx-autodoc-typehints>=1.19.4
+nbsphinx>=0.8.9
+jupytext>=1.14.1
+jupyter>=1.0.0
 
 docutils>=0.19
 plotly>=5.10
